examples/test/testpolicy14048.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14048
  namespace: namespace492
spec:
  podSelector:
    matchLabels:
      key38: value2
      key18: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value32
          key45: value16
          key19: value38
      podSelector:
        matchLabels:
          key39: value1
          key26: value32
